--- a/index_modificado.html
+++ b/index_modificado.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="MXzG-1nSDAz9Hn8gR8JICOvRixKgHdu8UlttLFEIsIY" />
   <title>I.E.S. Capellanía - Lo que no se cuenta</title>
   <style>
     body {
